--- a/SignInWithGoogle/app/src/main/res/layout/activity_home.xml
+++ b/SignInWithGoogle/app/src/main/res/layout/activity_home.xml
@@ -21,6 +21,7 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:background="#7fffffff"
+            android:fontFamily="@font/enjoy"
             android:padding="5dp"
             android:text="MAIN MENU"
             android:textColor="#d4000000"
@@ -50,6 +51,7 @@
                     android:layout_marginBottom="8dp"
                     android:background="#1a4a83"
                     android:textColor="#ffffff"
+                    android:fontFamily="@font/enjoy"
                     android:scaleType="centerInside"
                     android:src="@drawable/addplan"
                     android:text="여행 추가"
@@ -64,6 +66,7 @@
                     android:layout_marginBottom="8dp"
                     android:background="#1a4a83"
                     android:textColor="#ffffff"
+                    android:fontFamily="@font/enjoy"
                     android:scaleType="centerInside"
                     android:src="@drawable/recommend"
                     android:text="여행 추천"
@@ -84,6 +87,7 @@
                     android:layout_marginBottom="8dp"
                     android:background="#1a4a83"
                     android:textColor="#ffffff"
+                    android:fontFamily="@font/enjoy"
                     android:scaleType="centerInside"
                     android:src="@drawable/check"
                     android:text="버킷리스트"
@@ -98,6 +102,7 @@
                     android:layout_height="60dp"
                     android:background="#1a4a83"
                     android:textColor="#ffffff"
+                    android:fontFamily="@font/enjoy"
                     android:scaleType="centerInside"
                     android:src="@drawable/setting"
                     android:text="개발자정보"
