--- a/SignInWithGoogle/app/src/main/res/layout/activity_main.xml
+++ b/SignInWithGoogle/app/src/main/res/layout/activity_main.xml
@@ -91,6 +91,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="#6cffffff"
+                android:fontFamily="@font/enjoy"
                 android:text="@string/sign_out"
                 android:textColor="#000000"
                 android:layout_marginRight="8dp"
@@ -103,6 +104,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="#6cffffff"
+                android:fontFamily="@font/enjoy"
                 android:text="@string/disconnect"
                 android:textColor="#000000"
                 android:textSize="20sp" />
