--- a/SignInWithGoogle/app/src/main/res/layout/list_row.xml
+++ b/SignInWithGoogle/app/src/main/res/layout/list_row.xml
@@ -10,8 +10,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text=""
-        android:background="#80ffffff"
-        android:textSize="15sp"
+        android:background="#caffffff"
+        android:fontFamily="@font/enjoy"
+        android:textSize="22sp"
         android:singleLine="true"/>
 
 </RelativeLayout>
