--- a/SignInWithGoogle/app/src/main/res/layout/plan_item.xml
+++ b/SignInWithGoogle/app/src/main/res/layout/plan_item.xml
@@ -14,10 +14,11 @@
         android:layout_height="0dp"
         android:layout_weight="3"
         android:text="My Journey"
-        android:textSize="20sp"
+        android:textSize="25sp"
         android:textStyle="bold"
         android:gravity="center_vertical"
         android:background="#ffffff"
+        android:fontFamily="@font/enjoy"
         android:padding="3dp"/>
     <TextView
         android:layout_width="match_parent"
@@ -27,7 +28,8 @@
         android:text="yyyy-mm-dd ~ yyyy-mm-dd"
         android:gravity="center_vertical"
         android:layout_marginTop="2dp"
-        android:textSize="15sp"
+        android:fontFamily="@font/enjoy"
+        android:textSize="20sp"
         android:background="#ffffff"
         android:padding="3dp"
         />
