--- a/SignInWithGoogle/app/src/main/res/values/colors.xml
+++ b/SignInWithGoogle/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#080eb7</color>
     <color name="SeSSapGreen">#FFCCCC</color>
     <color name="menuColor">#FF9999</color>
     <color name="white">#FFFFFF</color>
