--- a/SignInWithGoogle/app/src/main/res/layout/recom_sort_by_algo.xml
+++ b/SignInWithGoogle/app/src/main/res/layout/recom_sort_by_algo.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
     <RelativeLayout
         android:orientation="vertical"
@@ -13,12 +15,15 @@
 
             <android.support.design.widget.FloatingActionButton
                 android:id="@+id/backfloatingBtn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
                 android:layout_alignParentBottom="true"
                 android:layout_centerHorizontal="true"
                 android:layout_marginBottom="25dp"
-                android:text="Back" />
+                android:src="@drawable/ok"
+                app:backgroundTint="#0e004a"
+                app:elevation="0dp"
+                app:rippleColor="@android:color/transparent" />
         </RelativeLayout>
     </RelativeLayout>
 
