--- a/SignInWithGoogle/app/src/main/res/layout/tutorial6.xml
+++ b/SignInWithGoogle/app/src/main/res/layout/tutorial6.xml
@@ -7,5 +7,5 @@
         android:id="@+id/tutorial6"
         android:layout_height="match_parent"
         android:layout_width="match_parent"
-        android:src ="#c57777"/>
+        android:src ="@drawable/tutorial6"/>
 </RelativeLayout>
