--- a/SignInWithGoogle/app/src/main/res/layout/tutorial7.xml
+++ b/SignInWithGoogle/app/src/main/res/layout/tutorial7.xml
@@ -7,6 +7,6 @@
         android:id="@+id/tutorial7"
         android:layout_height="match_parent"
         android:layout_width="match_parent"
-        android:background="#8a0909" />
+        android:background="@drawable/tutorial7" />
 
 </RelativeLayout>
