--- a/SignInWithGoogle/app/src/main/res/layout/tutorial9.xml
+++ b/SignInWithGoogle/app/src/main/res/layout/tutorial9.xml
@@ -7,6 +7,6 @@
         android:id="@+id/tutorial9"
         android:layout_height="match_parent"
         android:layout_width="match_parent"
-        android:src ="#945252"
+        android:src ="@drawable/tutorial9"
         android:scaleType="centerInside"/>
 </LinearLayout>
